# slimSMTP

./: .flake8  .gitignore  README.md  authentication.py  configuration.py  example.py  helpers.py  helpers.source  pyproject.toml  reciever.py  requirements.txt  slimSMTP.py  slim_smtp.py  storages.py
.github/workflows/: bandit.yaml  flake8.yaml  mypy.yaml  pytest.yaml
examples/: server.py
plugins/: postgresql.py
slimSMTP/: __init__.py
slimSMTP/configuration/: __init__.py  configuration.py
slimSMTP/exceptions/: __init__.py
slimSMTP/logger/: __init__.py  logger.py
slimSMTP/mail/: __init__.py  external.py  helpers.py  mail.py  spam.py
slimSMTP/parsers/: __init__.py  command.py  dns.py  parser.py
slimSMTP/realms/: __init__.py  realm.py
slimSMTP/sessions/: __init__.py  session.py
slimSMTP/sockets/: __init__.py  clients.py  server.py  sockets.py
slimSMTP/storage/: __init__.py  memory.py  postgresql.py
tests/: test_cmd_data.py  test_config.py  test_hanging_quit.py  test_parser.py  test_recieve_email.py  test_server.py
