[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python-slimSMTP"
module = "slimSMTP"
authors = [{name = "Anton Hvornum", email = "anton.feeds+github@gmail.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
	"dnspython",
	"pydantic",
	"psycopg2-binary",
	"systemd",
	"python-pam"
]

[project.urls]
Home = "https://github.com/Torxed/slimSMTP"
Documentation = "https://slimSMTP.readthedocs.io/"
Source = "https://github.com/Torxed/slimSMTP"

[project.optional-dependencies]
test = [
	"pytest",
	"mypy",
	"flake8",
]

[project.scripts]
slimSMTP = "slimSMTP:main"

[tool.flit.sdist]
exclude = ["tests/", "test.py"]

[tool.flit.module]
name = "slimSMTP"

[tool.mypy]
python_version = "3.10"
exclude = "tests"

[[tool.mypy.overrides]]
module = "psycopg2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dns.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "systemd.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[tool.bandit]
targets = ["slimSMTP"]
exclude = ["/tests"]